# ran-kpi-root-cause-analyzer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/raw/: sample_ran_kpi_data.csv
docs/: architecture.md  dependencies.md  engineering_assumptions.md  final_engineering_review.md  repository_tree.md  sample_case_study.md  test_summary.md
notebooks/: 01_exploratory_analysis.ipynb
reports/: example_report.html
src/ran_kpi_analyzer/: __init__.py  anomaly_detection.py  cli.py  config.py  data_loader.py  exceptions.py  modeling.py  preprocessing.py  report_generator.py  root_cause.py  synthetic_data.py  visualization.py
tests/: __init__.py  conftest.py  test_anomaly_detection.py  test_data_loader.py  test_integration.py  test_modeling.py  test_preprocessing.py  test_root_cause.py  test_synthetic_data.py
