[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ran-kpi-root-cause-analyzer"
version = "0.1.0"
description = "Engineering-focused RAN KPI degradation and root-cause analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Omid Rahimi" }]
keywords = [
  "ran",
  "kpi",
  "root-cause-analysis",
  "telecom",
  "test-automation",
  "network-validation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "jinja2>=3.1,<4",
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "pandas>=2.2,<4",
  "scikit-learn>=1.6,<2",
  "shap>=0.48,<0.52",
  "xgboost>=3.0,<4",
]

[project.scripts]
ran-kpi-analyzer = "ran_kpi_analyzer.cli:main"

[dependency-groups]
dev = [
  "black==25.1.0",
  "mypy==1.14.1",
  "pre-commit==4.0.1",
  "pytest==9.0.3",
  "pytest-cov==6.0.0",
  "ruff==0.8.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=ran_kpi_analyzer --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["ran_kpi_analyzer"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src", "main.py", "tests"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
